--- a/index.html
+++ b/index.html
@@ -1,55 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-		<script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
+		<meta charset="UTF-8" />
+		<script src="js/phaser.min.js"></script>
+		<style>
+			canvas {
+				/* width: 100%; */
+			}
+		</style>
 	</head>
 	<body>
-		<script>
-			var config = {
-				type: Phaser.AUTO,
-				width: 800,
-				height: 600,
-				physics: {
-					default: 'arcade',
-					arcade: {
-						gravity: { y: 200 },
-					},
-				},
-				scene: {
-					preload: preload,
-					create: create,
-				},
-			};
-
-			var game = new Phaser.Game(config);
-
-			function preload() {
-				this.load.setBaseURL('http://labs.phaser.io');
-
-				this.load.image('sky', 'assets/skies/space3.png');
-				this.load.image('logo', 'assets/sprites/phaser3-logo.png');
-				this.load.image('red', 'assets/particles/red.png');
-			}
-
-			function create() {
-				this.add.image(400, 300, 'sky');
-
-				var particles = this.add.particles('red');
-
-				var emitter = particles.createEmitter({
-					speed: 100,
-					scale: { start: 1, end: 0 },
-					blendMode: 'ADD',
-				});
-
-				var logo = this.physics.add.image(400, 100, 'logo');
-
-				logo.setVelocity(100, 200);
-				logo.setBounce(1, 1);
-				logo.setCollideWorldBounds(true);
-
-				emitter.startFollow(logo);
-			}
-		</script>
+		<script src="js/game.js"></script>
 	</body>
 </html>
