--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-
+		<script src="js/gsap.min.js"></script>
 		<script src="js/phaser.min.js"></script>
 		<style>
 			body {
